--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 41: Just Shy of Sure - The Beths
+          Week 42: Slater - Tyler, The Creator
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.1/10</h2>
+            <h2 id="rating">Overall Rating 8.3/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/3sZ53IbCqyRxcHuT8eZMFA?si=8285e3bb7bb44087"
+                    href="https://open.spotify.com/track/5wTpnBRTx1HSGQVDZQ2VSh?si=21d669bbf5c24ba0"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=SzGdv-PmLVo"
+                    href="https://www.youtube.com/watch?v=FD-0K8G3Nyk"
                     target="_blank"
                     ><center>
                       <img
@@ -113,24 +113,21 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              For this song, my favorite part is, simply, the chorus. Elizabeth
-              Stoke's vocals on all of The Beth's songs are so gorgeous and this
-              one is no different (I like the subtle New Zealand-ness of her
-              voice). Everything just comes together here in the chorus and I
-              cannot get enough this week.
+              "iiiiiii, juuuusst, wanna, riiiddeee, my bike" Frank Ocean's
+              vocals project this song to the top spot this week, I get excited
+              every single time his melody is coming up. I like the simplicity
+              of this track all wrapped up in this little solo.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Sticking to my recent alternative indie obsession, we come to The
-              Beths this week! I finally got around to listening to "Jump Rope
-              Gazers" this week while studying for finals and WOW!!! It now
-              reigns supreme over their other two studio albums for me. This
-              song in particular has rocketed upwards in heavy contention for my
-              favorite of this band. I'm a sucker for tragic songs disguised by
-              catchy choruses and upbeat melodies, and this track really checks
-              all my boxes in that regard. Give this one a listen, whether sad
-              or happy, and make the best of your week no matter the
-              circumstances.
+              Songs about bikes are really fun to me and for some reason Frank
+              Ocean and Tyler, The Creator have two of these tracks together.
+              While not my favorite of Tyler's albums, I have been slowly
+              finding songs from "Wolf" that are attractive to me. This is my
+              latest obsession and it continues my quest for summer-like music.
+              Give this one a listen while riding a bike, preferrably, but
+              anywhere outside on a summer day will do. As always, make it a
+              great week!
             </p>
           </div>
         </div>
@@ -163,19 +160,17 @@
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
-          <h2 style="font-size: 30px" id="title">
-            Dallin Corless: Wet - Dazey and the Scouts
-          </h2>
+          <h2 style="font-size: 30px" id="title">Cody: Carloline - Animé</h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 7.9/10</h2>
+              <h2 id="rating">Overall Rating 8.9/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/7yBjQ29XKxHlxuqycHuvmm?si=c078cd1e5772492d"
+                    href="https://open.spotify.com/track/5hTpBe8h35rJ67eAWHQsJx?si=e3f27525558f4660"
                     target="_blank"
                     ><center>
                       <img
@@ -189,7 +184,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=xnf9c6wyxRw"
+                    href="https://www.youtube.com/watch?v=3j8ecF8Wt4E"
                     target="_blank"
                     ><center>
                       <img
@@ -206,19 +201,10 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            Last time I did csotw, I reported on maybe one of the best songs
-            ever written. So this time I figured id just cover this silly little
-            bop I've been back into recently (lk thanks to a tiktok micro
-            trend). I love this song because you can really feel the amount of
-            fun the artists had recording it. It manages to feel moody and a
-            little expressive while still remaining light hearted and upbeat
-            thru its use of raunchy metaphors and catchy melodies, mimicking the
-            sound of crying during the chorus. Lyrically, it just doesn't take
-            itself that seriously, almost adapting a dissociative, laissez faire
-            attitude towards the perils of a relationship. Sonically the song is
-            aggressively fast paced, always keeping your interest. The song
-            really does feel like that classic alt/punk pop an angsty
-            protagonist would make in a coming of age movie and I love it.
+            This song is a certified hood classic, it really gets you in the
+            mood. It’s a Great sing to listen to with friends, on a car ride, or
+            even just chilling at home. Overall, an amazing song that’s almost
+            everyone has enjoyed at one point since it’s come out!
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -428,6 +414,11 @@
               <td>40</td>
               <td>Barely on My Mind - The Regrettes</td>
               <td>8.5/10</td>
+            </tr>
+            <tr>
+              <td>41</td>
+              <td>Just Shy of Sure - The Beths</td>
+              <td>9.1/10</td>
             </tr>
           </table>
         </div>
