--- a/songs.html
+++ b/songs.html
@@ -160,7 +160,7 @@
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
-          <h2 style="font-size: 30px" id="title">Cody: Carloline - Animé</h2>
+          <h2 style="font-size: 30px" id="title">Cody: Caroline - Animé</h2>
           <div class="row">
             <div class="column">
               <h2 id="rating">Overall Rating 8.9/10</h2>
