--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 42: Slater - Tyler, The Creator
+          Week 43: You and I - Lady Gaga
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.3/10</h2>
+            <h2 id="rating">Overall Rating 8.8/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5wTpnBRTx1HSGQVDZQ2VSh?si=21d669bbf5c24ba0"
+                    href="https://open.spotify.com/track/6szOfaZn6H3rZXnUqgJ4R7?si=f2ac9bf74c8a4866"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=FD-0K8G3Nyk"
+                    href="https://www.youtube.com/watch?v=X9YMU0WeBwU"
                     target="_blank"
                     ><center>
                       <img
@@ -113,21 +113,19 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              "iiiiiii, juuuusst, wanna, riiiddeee, my bike" Frank Ocean's
-              vocals project this song to the top spot this week, I get excited
-              every single time his melody is coming up. I like the simplicity
-              of this track all wrapped up in this little solo.
+              Vocals. The build-up to Lady Gaga's belting of the words "you and
+              I" is so tantalizing and the vocals here are nearly impossible to
+              compete with.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Songs about bikes are really fun to me and for some reason Frank
-              Ocean and Tyler, The Creator have two of these tracks together.
-              While not my favorite of Tyler's albums, I have been slowly
-              finding songs from "Wolf" that are attractive to me. This is my
-              latest obsession and it continues my quest for summer-like music.
-              Give this one a listen while riding a bike, preferrably, but
-              anywhere outside on a summer day will do. As always, make it a
-              great week!
+              For no good reason, I've been slowly listening to the entirety of
+              Lady Gaga's discography (excluding "Love For Sale", oops), and
+              I've had three of her songs stuck in my head all week. Lady Gaga
+              doesn't often return to these ballad-like, vocalistic songs but I
+              think it is really where her music excels. "You And I" is my
+              favorite of these types and takes the spot of SotW over "G.U.Y"
+              and "Venus". Alright, make it a good week and such!
             </p>
           </div>
         </div>
@@ -419,6 +417,11 @@
               <td>41</td>
               <td>Just Shy of Sure - The Beths</td>
               <td>9.1/10</td>
+            </tr>
+            <tr>
+              <td>42</td>
+              <td>Slater - Tyler, The Creator</td>
+              <td>8.3/10</td>
             </tr>
           </table>
         </div>
