--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 43: You and I - Lady Gaga
+          Week 44: Plastic Jesus - Tia Blake
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.8/10</h2>
+            <h2 id="rating">Overall Rating 9.0/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/6szOfaZn6H3rZXnUqgJ4R7?si=f2ac9bf74c8a4866"
+                    href="https://open.spotify.com/track/5WNfllr5vx9PWc3e5B4eYi?si=bb97bca7823d4251"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=X9YMU0WeBwU"
+                    href="https://www.youtube.com/watch?v=9QEFhkcOleQ"
                     target="_blank"
                     ><center>
                       <img
@@ -113,19 +113,23 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Vocals. The build-up to Lady Gaga's belting of the words "you and
-              I" is so tantalizing and the vocals here are nearly impossible to
-              compete with.
+              The overall voice and subtle twang of Tia Blake heavily exhibited
+              in the use of "yeller" and "feller" puts the bow on top of this
+              lovely folk diddy.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              For no good reason, I've been slowly listening to the entirety of
-              Lady Gaga's discography (excluding "Love For Sale", oops), and
-              I've had three of her songs stuck in my head all week. Lady Gaga
-              doesn't often return to these ballad-like, vocalistic songs but I
-              think it is really where her music excels. "You And I" is my
-              favorite of these types and takes the spot of SotW over "G.U.Y"
-              and "Venus". Alright, make it a good week and such!
+              What a competitive week! After 20 hours of driving over the past 3
+              days, it's safe to say that a songful renaissance of sorts was
+              experienced. This song is by far the outlier of the contenders in
+              genre. It's simple, short, sweet, and lyrically reminiscent of my
+              drive. Apart from the obvious religious commentary that I will
+              stay far away from for now, Tia Blake's hit from 1972 reminds me
+              of the fragility of life, and of the chosen belief that everything
+              will work out. Close your eyes and listen to this song; imagine
+              the described scene or just sit in the darkness. Either way,
+              everything will still be okay when you open them again. Make it a
+              good week!
             </p>
           </div>
         </div>
@@ -158,17 +162,19 @@
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
-          <h2 style="font-size: 30px" id="title">Cody: Caroline - Animé</h2>
+          <h2 style="font-size: 30px" id="title">
+            Dallin Corless: anything - Adrianne Lenker
+          </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 8.9/10</h2>
+              <h2 id="rating">Overall Rating 9.5/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5hTpBe8h35rJ67eAWHQsJx?si=e3f27525558f4660"
+                    href="https://open.spotify.com/track/4PwWESSlTwzvw9B7bmtTLS?si=8a6c062cee794d98"
                     target="_blank"
                     ><center>
                       <img
@@ -182,7 +188,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=3j8ecF8Wt4E"
+                    href="https://www.youtube.com/watch?v=Bs4MffKz9rk"
                     target="_blank"
                     ><center>
                       <img
@@ -199,10 +205,22 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            This song is a certified hood classic, it really gets you in the
-            mood. It’s a Great sing to listen to with friends, on a car ride, or
-            even just chilling at home. Overall, an amazing song that’s almost
-            everyone has enjoyed at one point since it’s come out!
+            This song was actually in the running for my last sotw, so I am
+            overjoyed it's getting its moment. I think this song has some of the
+            best lyrical songwriting I've ever heard. Lenker so effortlessly
+            expresses the beauty in the mundane parts of our lives, and the
+            desire to share that with someone. She explores this feeling of
+            wanting to be so connected to someone, you are aware of all the
+            parts of their lives that normally only they are privy to. Phrases
+            like "wanna listen to the sound of you blinking" drive this idea of
+            sharing your whole existence with someone. Almost every line from
+            this song could stand alone as perfect little pieces of poetry, yet
+            their assimilation into the work as a whole makes them all the more
+            memorable. Sonically this song is almost synesthetic for me, evoking
+            memories of my time in the outdoors with waterfalls, meadows, and a
+            simpler existence. It may not be the flashiest genre of song
+            writing, but this final product is just so innately beautiful and
+            powerful to me.
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -422,6 +440,11 @@
               <td>42</td>
               <td>Slater - Tyler, The Creator</td>
               <td>8.3/10</td>
+            </tr>
+            <tr>
+              <td>43</td>
+              <td>You and I - Lady Gaga</td>
+              <td>8.8/10</td>
             </tr>
           </table>
         </div>
