--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 44: Plastic Jesus - Tia Blake
+          Week 45: Across the Universe - Fiona Apple
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.0/10</h2>
+            <h2 id="rating">Overall Rating 9.4/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5WNfllr5vx9PWc3e5B4eYi?si=bb97bca7823d4251"
+                    href="https://open.spotify.com/track/6ZQgooEk8PvsLxedYaT6Oa?si=fb517be0a16c4ea3"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=9QEFhkcOleQ"
+                    href="https://www.youtube.com/watch?v=CmlnO1EwCT4"
                     target="_blank"
                     ><center>
                       <img
@@ -113,23 +113,20 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The overall voice and subtle twang of Tia Blake heavily exhibited
-              in the use of "yeller" and "feller" puts the bow on top of this
-              lovely folk diddy.
+              Fiona Apple's voice is too good honestly. She transforms this
+              cover in a way that not even the BEATLES could. To give the boys
+              credit, though, the lyricism of this song is really powerful to me
+              as well.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              What a competitive week! After 20 hours of driving over the past 3
-              days, it's safe to say that a songful renaissance of sorts was
-              experienced. This song is by far the outlier of the contenders in
-              genre. It's simple, short, sweet, and lyrically reminiscent of my
-              drive. Apart from the obvious religious commentary that I will
-              stay far away from for now, Tia Blake's hit from 1972 reminds me
-              of the fragility of life, and of the chosen belief that everything
-              will work out. Close your eyes and listen to this song; imagine
-              the described scene or just sit in the darkness. Either way,
-              everything will still be okay when you open them again. Make it a
-              good week!
+              This is one of very few covers that I prefer over the original.
+              The Beatles' original rendition of this song honestly doesn't
+              impress me in any way but lyrically. I think Fiona Apple brings
+              out the existentiality of this song through her vocal whimsy with
+              which I've fallen so in love. Give this one a listen and, if you
+              like it, queue up my favorite Fiona Apple album "When The
+              Pawn...". Make it a great week!
             </p>
           </div>
         </div>
@@ -445,6 +442,11 @@
               <td>43</td>
               <td>You and I - Lady Gaga</td>
               <td>8.8/10</td>
+            </tr>
+            <tr>
+              <td>44</td>
+              <td>Plastic Jesus - Tia Blake</td>
+              <td>9.0/10</td>
             </tr>
           </table>
         </div>
