--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 45: Across the Universe - Fiona Apple
+          Week 46: Popular - The Weeknd
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.4/10</h2>
+            <h2 id="rating">Overall Rating 7.5/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/6ZQgooEk8PvsLxedYaT6Oa?si=fb517be0a16c4ea3"
+                    href="https://open.spotify.com/track/5xP9lQYA8YQmQh6BOxcAnR?si=d71b381fa9e343e8"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=CmlnO1EwCT4"
+                    href="https://www.youtube.com/watch?v=xnvkStb2jT0"
                     target="_blank"
                     ><center>
                       <img
@@ -113,20 +113,15 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Fiona Apple's voice is too good honestly. She transforms this
-              cover in a way that not even the BEATLES could. To give the boys
-              credit, though, the lyricism of this song is really powerful to me
-              as well.
+              Of course my favorite part of this suoer strange song is Playboi
+              Carti's nearly unintelligible few lines. Keep it up man!!
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              This is one of very few covers that I prefer over the original.
-              The Beatles' original rendition of this song honestly doesn't
-              impress me in any way but lyrically. I think Fiona Apple brings
-              out the existentiality of this song through her vocal whimsy with
-              which I've fallen so in love. Give this one a listen and, if you
-              like it, queue up my favorite Fiona Apple album "When The
-              Pawn...". Make it a great week!
+              Overall, this isn't a top tier song by any means. I just cannot
+              get over the combination of The Weeknd, Playboi Carti, and MADONNA
+              on a song together?? The fact that it sounds as good as it does is
+              a miracle in my opinion. With that, make it a great week everyone!
             </p>
           </div>
         </div>
@@ -160,18 +155,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Dallin Corless: anything - Adrianne Lenker
+            Omar Mejia: Invincible - Omar Apollo (feat. Daniel Caesar)
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 9.5/10</h2>
+              <h2 id="rating">Overall Rating 9.3/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/4PwWESSlTwzvw9B7bmtTLS?si=8a6c062cee794d98"
+                    href="https://open.spotify.com/track/7jhxagwOk9y1HC5ciRfmkQ?si=b7ac240e1cf04816"
                     target="_blank"
                     ><center>
                       <img
@@ -185,7 +180,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=Bs4MffKz9rk"
+                    href="https://www.youtube.com/watch?v=BAKvb8qD4Cw"
                     target="_blank"
                     ><center>
                       <img
@@ -202,22 +197,18 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            This song was actually in the running for my last sotw, so I am
-            overjoyed it's getting its moment. I think this song has some of the
-            best lyrical songwriting I've ever heard. Lenker so effortlessly
-            expresses the beauty in the mundane parts of our lives, and the
-            desire to share that with someone. She explores this feeling of
-            wanting to be so connected to someone, you are aware of all the
-            parts of their lives that normally only they are privy to. Phrases
-            like "wanna listen to the sound of you blinking" drive this idea of
-            sharing your whole existence with someone. Almost every line from
-            this song could stand alone as perfect little pieces of poetry, yet
-            their assimilation into the work as a whole makes them all the more
-            memorable. Sonically this song is almost synesthetic for me, evoking
-            memories of my time in the outdoors with waterfalls, meadows, and a
-            simpler existence. It may not be the flashiest genre of song
-            writing, but this final product is just so innately beautiful and
-            powerful to me.
+            This is easily one of my favorite songs by Omar Apollo. When I
+            initially listened to this song at 2 AM for the first time, the
+            chorus left me deep in thought: “If I were to go, tell me, would you
+            notice me?” This lyric alone can be interpreted in so many different
+            ways. It evokes inner emotions and makes you ponder about what other
+            people think of you. In the unfortunate case that something happens,
+            how will people remember you? Omar shows his vulnerability by
+            questioning the nature of his relationship. I absolutely love it
+            because it feels so authentic and personal. Daniel Caesar being
+            featured in this song is the cherry on top of this wonderfully
+            written song. I am so glad that I’ve been able to see this song
+            performed live twice now. :’)
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
