--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 46: Popular - The Weeknd
+          Week 46: Attention - Doja Cat
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 7.5/10</h2>
+            <h2 id="rating">Overall Rating 8.8/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5xP9lQYA8YQmQh6BOxcAnR?si=d71b381fa9e343e8"
+                    href="https://open.spotify.com/track/11xC6P3iKYpFThT6Ce1KdG?si=28dcde6ee93d4f62"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=xnvkStb2jT0"
+                    href="https://www.youtube.com/watch?v=agXQQDasq0U"
                     target="_blank"
                     ><center>
                       <img
@@ -113,15 +113,21 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Of course my favorite part of this suoer strange song is Playboi
-              Carti's nearly unintelligible few lines. Keep it up man!!
+              This song holds most of its beauty in its lyricism. Doja Cat's
+              numerous blunt callouts to the general public in reference to her
+              changing brand make this track what it is. I personally loved
+              every line of it.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Overall, this isn't a top tier song by any means. I just cannot
-              get over the combination of The Weeknd, Playboi Carti, and MADONNA
-              on a song together?? The fact that it sounds as good as it does is
-              a miracle in my opinion. With that, make it a great week everyone!
+              SHE'S BACK!! One of my favorite artists started the rollout of her
+              newest album with an attention-demanding single. After lots of
+              unwarrented criticism for her "alternification" from a typically
+              feminine pop star into a more refined yet edgy (hiphop rap, alt?)
+              artist. This song shows that new side of her while being
+              undeniably catchy and retaining her masterful pop-influenced
+              melodies. I can't wait for the album after this great start.
+              That's all from me, make it a great week!
             </p>
           </div>
         </div>
@@ -438,6 +444,11 @@
               <td>44</td>
               <td>Plastic Jesus - Tia Blake</td>
               <td>9.0/10</td>
+            </tr>
+            <tr>
+              <td>45</td>
+              <td>Popular - The Weeknd</td>
+              <td>7.5/10</td>
             </tr>
           </table>
         </div>
