--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 46: Attention - Doja Cat
+          Week 47: To Zion - Ms. Lauryn Hill
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.8/10</h2>
+            <h2 id="rating">Overall Rating 8.4/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/11xC6P3iKYpFThT6Ce1KdG?si=28dcde6ee93d4f62"
+                    href="https://open.spotify.com/track/7x6hO9VMAee9x1iWaeNkL6?si=27426df4eb7748ee"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=agXQQDasq0U"
+                    href="https://www.youtube.com/watch?v=SWz-RU3OtmA"
                     target="_blank"
                     ><center>
                       <img
@@ -113,21 +113,21 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              This song holds most of its beauty in its lyricism. Doja Cat's
-              numerous blunt callouts to the general public in reference to her
-              changing brand make this track what it is. I personally loved
-              every line of it.
+              The ensemble of vocalists in the background of the latter few
+              choruses. They really enthuse the powerful lyrics of this chorus,
+              not to mention the superb notes that Ms. Lauryn Hill is belting
+              out.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              SHE'S BACK!! One of my favorite artists started the rollout of her
-              newest album with an attention-demanding single. After lots of
-              unwarrented criticism for her "alternification" from a typically
-              feminine pop star into a more refined yet edgy (hiphop rap, alt?)
-              artist. This song shows that new side of her while being
-              undeniably catchy and retaining her masterful pop-influenced
-              melodies. I can't wait for the album after this great start.
-              That's all from me, make it a great week!
+              In what is one of the greatest and most influential hip-hop albums
+              of all time, "To Zion" was really speaking to me this week. As an
+              ode to her son Zion, it speaks worlds about motherhood and the
+              pressures of being a woman in a male-dominated career. While I am
+              about as far removed from these experiences as socially possible,
+              the power that exudes from this song and its current reputation is
+              truly inspiring. Listen to this one if you're feeling
+              family-oriented. Make it a great week!
             </p>
           </div>
         </div>
@@ -449,6 +449,11 @@
               <td>45</td>
               <td>Popular - The Weeknd</td>
               <td>7.5/10</td>
+            </tr>
+            <tr>
+              <td>46</td>
+              <td>Attention - Doja Cat</td>
+              <td>8.8/10</td>
             </tr>
           </table>
         </div>
